# Teapot

./: CMakeLists.txt  README.md  Teapot.sln
Teapot/code/include/: camera.h  input.h  lightmanager.h  object.h  renderer.h  scene.h  window.h
Teapot/code/shaders/: blitarray.hlsl  skybox.hlsl  ssao.hlsl  sslr.hlsl
Teapot/code/src/: funcs.cpp  light.cpp  lightmanager.cpp  main.cpp  object.cpp  renderer.cpp  scene.cpp  splashdrop.cpp  splashsystem.cpp  window.cpp
assets/models/: mickey.mymesh  teapot.mymesh
assets/shaders/: blitPS.sb  blitVS.sb  blitarrayPS.sb  blitarrayVS.sb  blurXPS.sb  blurYPS.sb  combine_tonemapPS.sb  downsample2x2PS.sb  downsample4x4PS.sb  downsampleVS.sb  gbufferDribblePS.sb  gbufferRingPS.sb  gbufferVS.sb  lighting.sb  lighttransform.sb  particleDropPS.sb  particlePointLightPS.sb  particleSplashPS.sb  particleVS.sb  rainbufPS.sb  rainbufVS.sb  shadowmapVS.sb  skyboxPS.sb  skyboxVS.sb  ssao.sb  sslr.sb
assets/textures/: dummy_normalMap.dds  dummy_specularMap.dds  porcelain.dds  puddleMask.dds  wood.dds
code/include/: Miniball.h  constant_parameters.h  funcs.h  light.h  object.h  raincaster.h  raindrop.h  rendertarget.h  splashdrop.h  splashsystem.h  window.h
code/shaders/: blit.hlsl  blur.hlsl  combine_tonemap.hlsl  compileshaders.bat  downsample.hlsl  gbuffer.hlsl  lighting.hlsl  lighttransform.hlsl  particle.hlsl  rainbuf.hlsl  shadowmap.hlsl
code/src/: camera.cpp  funcs.cpp  input.cpp  lightmanager.cpp  main.cpp  object.cpp  raincaster.cpp  raindrop.cpp  renderer.cpp  rendertarget.cpp  scene.cpp  window.cpp
(+56 files in other folders)
